2009-03-13  Jose Dapena Paz  <jdapena@igalia.com>

	* Fix for previous "refresh" commit.

2009-03-11  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-store-account.c: now
	get_folders "refresh" parameter forces to fetch again
	the list of folders. This way we can acknowledge when
	there are new folders available on server.

2009-03-06  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-session-camel.c
	(tny_session_queue_going_online_for_account):
	set the session to online before trying to connect the
	account. Otherwise the connection won't success

2009-03-02  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-folder.c
	(_tny_camel_folder_guess_folder_type): Improved detection of
	folders called 'inbox'. If the parent is not an account then it's
	unlikely to be a 'real' inbox

2009-02-27  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/camel-lite/tny-camel-folder.c: disable push email
	on uncaching (to avoid keeping current folder active in store when
	we're not reading it anymore).

2009-02-16  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-store.c:
	fix bad access to namespaces due to bad reusage of pointer.

	* libtinymail-camel/camel-lite/camel/camel-mime-utils.c: fix
	camel_header_set_param as it could cause crashes on setting params
	if a param struct was already available.

2009-02-09  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-store.c:
	Small fix to avoid referencing an old copy of namespace in 
	get_folder_info_online.

2009-02-09  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-account.c
	(tny_camel_account_get_supported_secure_authentication):
	Properly initialize a boolean. Valgrind complained about
	uninitialized value

2009-02-04  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-store-account-priv.h: